Fix resizing issue on mobile devices

--- a/static/main.css
+++ b/static/main.css
@@ -9,7 +9,9 @@ html,body{
     min-height: 100vh;
     color: white;
 }
-
+html,body, .wrapper, main{
+    max-width: 100vw;
+}
 body, .wrapper{
     display: flex;
     flex-direction: column;
